ebony-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebony-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ebony-app
  template:
    metadata:
      labels:
        app: ebony-app
    spec:
      containers:
      - name: ebony-app
        image: maweiyi/ebony-app:latest
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "500Mi"
        ports:
        - containerPort: 3000
