ebony-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebony-app
spec:
  selector:
    app: ebony-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
