external-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-redis
spec:
  type: ExternalName
  externalName: redis.kiwi.xyz
