ebony-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebony-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ebony.kiwi.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ebony-app
            port:
              number: 80
